--- a/src/Components/ServicesHome/ServicesHome.css
+++ b/src/Components/ServicesHome/ServicesHome.css
@@ -6,42 +6,53 @@
 
 }
 
-.service-home-container{
-  width: 50vw;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
-}
-
 .service-heading{
   text-align: center;
   font-size: 3rem;
   margin: 0;
 }
 
-.hr-div{
+.pricing-plans-container{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 50%;
+  margin: auto;
+  gap: 2rem;
+}
+
+.element-seperator-div{
   width: 10vw;
-  margin: 1rem auto;
-  display: flex;
-  justify-content: center;
+  margin: 1.8rem auto 2.3rem;
+
 }
 
-.elemnetor-divider{
+.element-seperator{
+  border-top: 2px solid #e6ae4a;
   text-align: center;
-  border-top-style: solid;
-  border-top-width: 3px;
-  border-top-color: #e6ae4a;
-  width: 8vw;
 }
 
-.service-home-childrens{
+.pricing-plans-childrens{
   background-color: white;
-  padding: 1rem .7rem;
   border-radius: 1rem;
-  cursor: pointer;
+  padding: 0 3rem 1.5rem;
 }
 
-.service-home-childrens:hover{
-  background-color: whitesmoke;
+.pricing-plans-icon{
+  font-size: 3rem;
+  text-align: center;
+  color: #e6ae4a;
+}
+
+.book-now-button{
+  border-style: hidden;
+  padding: 1rem 2rem;
+  color: #e6ae4a;
+  background-color: white;
+  font-weight: 600;
+  transition: background-color .3s ease-in color .3s ease-in;
+}
+
+.book-now-button:hover{
+  background-color: #e6ae4a;
+  color: white;
 }
