--- a/src/Components/Checkout/Checkout.css
+++ b/src/Components/Checkout/Checkout.css
@@ -16,8 +16,6 @@
 }
 
 .plan-notfound-alt{
-  width: 100%;
-  height: 50vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -26,4 +24,44 @@
 .plan-form-side{
   width: 80%;
   margin: auto;
+}
+
+.checkout-btn-div{
+  width: 80vw;
+  margin: 3rem auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.checkout-btn{
+  border-style: hidden;
+  padding: 1rem 0;
+  color: rgb(230, 174, 74);
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+
+.checkout-btn:hover{
+  background-color: rgb(230, 174, 74);
+  color: white;
+}
+
+.session-img-container-parent{
+  margin: 5rem 0;
+}
+
+.look-image-container{
+  width: 80vw;
+  margin: 1rem auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  overflow: hidden;
+}
+
+.look-image-img{
+  width: 490px;
+  height: 500px;
+  object-fit: cover;
+  margin: 1rem;
 }
