--- a/src/Components/Facilities/Facilities.css
+++ b/src/Components/Facilities/Facilities.css
@@ -4,3 +4,12 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
+
+@media screen and (max-width: 480px) {
+  .facilities-container{
+    width: 90vw;
+    margin: 4rem auto;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+}
